--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Assignment Two 2003944</title>
 </head>
 <body>
-    <p id="welcomeMessage"></p>
-    <input type="text" id="visitorName" placeholder="Enter your name">
+    <p id="welcomeMessage">
+        
+    </p>
+    <input type="text" id="Name" placeholder="Enter your name">
     <button id="submitButton">Submit</button>
     <script src="script.js"></script>
   </body>
