Refactor welcome message and add greeting functionality

--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <title>Assignment Two 2003944</title>
 </head>
 <body>
-    <p id="welcomeMessage">
-        
-    </p>
-    <input type="text" id="Name" placeholder="Enter your name">
+    <div id="welcomeMessage">
+    </div>
+    <!-- <input type="text" id="Name" placeholder="Enter your name">
     <button id="submitButton">Submit</button>
-    <script src="script.js"></script>
+    <script src="script.js"></script> -->
   </body>
 </html>
