Refactor welcome message and cookie handling

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 </head>
 <body>
     <div id="welcomeMessage">
+
     </div>
     <!-- <input type="text" id="Name" placeholder="Enter your name">
     <button id="submitButton">Submit</button>
-    <script src="script.js"></script> -->
+     -->
+    
+    <script src="script.js"></script>
   </body>
 </html>
